--- a/community/Resources/GoogleService-Info.plist
+++ b/community/Resources/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>1074040382485-qt0kfaojco5blbc39s1vr69skv2c0qkn.apps.googleusercontent.com</string>
+	<string>63100897575-redivdftr44v1p0hcslk2ebja06bujbl.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.1074040382485-qt0kfaojco5blbc39s1vr69skv2c0qkn</string>
+	<string>com.googleusercontent.apps.63100897575-redivdftr44v1p0hcslk2ebja06bujbl</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDFT2lSgIS6hXBZ8rDhRbumeSeeHSHOaZQ</string>
+	<string>AIzaSyBpKd8C00ksWvqsb66szRwqNXuU2O47pzw</string>
 	<key>GCM_SENDER_ID</key>
-	<string>1074040382485</string>
+	<string>63100897575</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>community</string>
+	<string>com.lastivky.community</string>
 	<key>PROJECT_ID</key>
-	<string>community-38e99</string>
+	<string>community-2ce28</string>
 	<key>STORAGE_BUCKET</key>
-	<string>community-38e99.appspot.com</string>
+	<string>community-2ce28.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1074040382485:ios:05d56801a399d33c335a1c</string>
+	<string>1:63100897575:ios:3760fd2e9645b840408102</string>
 </dict>
 </plist>
